Updates folder structure and adds routes

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,7 @@
             <button class="profile"><i class="fa fa-user-circle"></i></button>
         </div>
     </div>
+    {% block content %}{% endblock %}         
     <footer class="ezpark-footer">
         <div class="ezpark-footer-buttons">
             <button class="about">About</button>
