Updates routes and styles

--- a/templates/add_favorites.html
+++ b/templates/add_favorites.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+
+{% block content %}
 <div class="deck-container">
     <div class="deck-list">
         <button class="deck-item">West Deck</button>
@@ -18,3 +21,4 @@
         <button class="deck-item">Lot 14</button>
     </div>
 </div>
+{% endblock %}
