--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,4 +1,3 @@
-
 body {
     background: #074D16;
     font-family: Tahoma, sans-serif;
@@ -15,7 +14,6 @@ body {
     padding: 10px;
     background-color: #1C732F;
     color: #C9E03C;
-    border-radius: 20px;
 }
 
 .expark-container-header-buttons {
@@ -44,7 +42,6 @@ body {
     padding: 20px;
     margin-top: auto;
     margin-bottom: 0;
-    border-radius: 20px;
 }
 
 .ezpark-footer-buttons {
@@ -66,7 +63,6 @@ body {
     font-size: larger;
     font-family: Tahoma, sans-serif;
 }
-
 .deck-container {
     display: flex;
     justify-content: center;
@@ -94,3 +90,58 @@ body {
     text-align: center;
     cursor: pointer;
 }
+.home-page-div {
+    width: 80%;
+    max-width: 400px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 20px;
+    margin: 2rem auto;
+}
+
+.home-btn-container {
+    width: 80%; 
+    margin: auto;
+    max-width: 300px;
+}
+
+.home-btn-container > div {
+    background-color: #C9E03C;
+    margin: 1rem 0;
+    border-radius: 20px;
+    padding: 2rem;
+}
+
+.home-btn-container > div a {
+    color: #1C732F;
+    font-size: 2rem;
+    text-decoration: none;
+}
+
+.home-btn-container > div a:hover {
+    text-decoration: underline;
+}
+
+.g_id_signin div, #g_id_onload div {
+    margin: auto;
+    display: inline-block;
+}
+
+.g_id_signin, #g_id_onload {
+    margin: 2rem 0;
+}
+
+.login-header-div {
+    margin: auto;
+    width: 80%;
+    text-align: center;
+}
+
+.login-header {
+    color: #C9E03C;
+    margin: auto;
+    text-align: center;
+}
+
+
+
