Adds functionality to back and logout buttons

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -14,10 +14,6 @@ body {
     padding: 10px;
     background-color: #1C732F;
     color: #C9E03C;
-<<<<<<< HEAD
-=======
-    border-radius: 20px;
->>>>>>> dc357ed58c4f9236ca43ce16ca2793648f63e280
 }
 
 .expark-container-header-buttons {
@@ -46,14 +42,10 @@ body {
     padding: 20px;
     margin-top: auto;
     margin-bottom: 0;
-<<<<<<< HEAD
-=======
-    border-radius: 20px;
->>>>>>> dc357ed58c4f9236ca43ce16ca2793648f63e280
 }
 
 .ezpark-footer-buttons {
-    display: flex;
+    display: block;
     justify-content: space-between;
     width: 100%;
 }
@@ -70,7 +62,6 @@ body {
     text-decoration: none;
     font-size: larger;
     font-family: Tahoma, sans-serif;
-<<<<<<< HEAD
 }
 .deck-container {
     display: flex;
@@ -152,8 +143,12 @@ body {
     text-align: center;
 }
 
-
-
-=======
+.logout {
+    float: right;
 }
->>>>>>> dc357ed58c4f9236ca43ce16ca2793648f63e280
+
+.back:hover, .logout:hover {
+    cursor: pointer;
+}
+
+
