--- a/templates/add_favorites.html
+++ b/templates/add_favorites.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
+{% include "header.html" %}
+
 <div class="deck-container">
     <div class="deck-list">
         <button class="deck-item">West Deck</button>
