--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
+{% include "header.html" %}
+
 <div class="home-page-div">
     <div class="home-btn-container">
         <div class="map-btn">
