--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
+{% include "header.html" %}
+
 <div class="login-header-div">
     <h2 class="login-header">Login using your UNCC credentials</h2>
     
