--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -4,7 +4,12 @@
 
 {% include "header.html" %}
 
+<button>Favorites<i class="fa-sharp fa-solid fa-plus"></i></button>
+    
+    <ul>
+        <li> fav<i class="fa-sharp fa-solid fa-trash"></i></li>
 
+    </ul> 
 {% include "footer.html" %}
 
 {% endblock %}
