placed feedback in home html

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,9 @@
             <a href="/alerts">Alerts</a>
         </div>
     </div>
+    <div class="feedback-btn">
+        <p><a href="/feedback">Send Feedback</a></p>
+    </div>
 </div>
 
 {% include "footer.html" %}
