Updates home templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="feedback-btn">
-        <p><a href="/feedback">Send Feedback</a></p>
+        <p><a href="/feedback">Feedback</a></p>
     </div>
 </div>
 
