--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,6 +13,8 @@
 </footer>
 <script>
     function signOut() {
+        google.accounts.id.disableAutoSelect();
+        document.cookie = "g_csrf_token=; Max-Age=-99999999;";
         window.location.href="/login";
     }
     function goHome() {
