--- a/templates/footer.html
+++ b/templates/footer.html
@@ -15,7 +15,7 @@
     function signOut() {
         google.accounts.id.disableAutoSelect();
         document.cookie = "g_csrf_token=; Max-Age=-99999999;";
-        window.location.href="/login";
+        window.location.href="/logout";
     }
     function goHome() {
         window.location.href="/home";
