Adds styling to parking info

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,8 +2,7 @@
     <h1 class="ezpark-container-header">EZPark</h1>
     {% if not settingsDisplay %}
     <div class="ezpark-container-header-buttons">
-        <button class="settings"><i class="fa fa-gear"></i></button>
-        <button class="profile"><i class="fa fa-user-circle"></i></button>
+        <a href="/profile" class="profile"><i class="fa fa-user-circle"></i></a>
     </div>
     {% endif %}
 </div>
