--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -27,10 +27,12 @@ body {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.profile {
+.profile, .profile:hover {
     background: none;
     border: none;
-    font-size: 30px;
+    font-size: 40px;
+    color: black;
+    cursor: pointer;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
@@ -147,5 +149,22 @@ body {
 .back:hover,.about:hover, .logout:hover {
     cursor: pointer;
 }
+.parking-container {
+    margin: 2rem auto;
+}
 
+.parking-decks-container {
+    list-style-type: none;
+}
 
+.parking-decks-container .parking-deck {
+    color: #C9E03C;
+}
+
+.parking-decks-container .parking-deck .percent.regular {
+    color: #C9E03C;
+}
+
+.parking-decks-container .parking-deck .percent.alert {
+    color: red;
+}
