--- a/templates/interactive_map.html
+++ b/templates/interactive_map.html
@@ -7,7 +7,13 @@
 <div class="parking-container">
     <ul class="parking-decks-container">
         {% for deck in deckData %}
-        <li class="parking-deck">{{ deck.name }} {{ deck.percent }}</li>
+        <li class="parking-deck"><span class="name">{{ deck.name }}</span> 
+            {% if deck.percent_number is gt 20  %}
+            <span class="percent regular">{{ deck.percent }}</span>
+            {% else %}
+            <span class="percent alert">{{ deck.percent }}</span>
+            {% endif %}
+        </li>
         {% endfor %}
     </ul>
 </div>
