--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -4,7 +4,7 @@
 
 {% include "header.html" %}
 <div style="text-align: center; margin-bottom: 20px;">
-    <!--<button onclick="location.href='{{ url_for('add_favorites_page') }}'">Add Favorite</button>-->
+    <button onclick="location.href='{{ url_for('add_favorites_page') }}'">Favorites <i class="fa-sharp fa-solid fa-plus"></i></button>
 </div>
 
 <div class="deck-container">
