--- a/templates/add_classes.html
+++ b/templates/add_classes.html
@@ -4,7 +4,48 @@
 
 {% include "header.html" %}
 
-<div></div>
+<div class="classes-header">
+    <h1 class="header">
+        Add Class
+    </h1>
+</div>
+<div class="course-container">
+    <h2 class="label-header">
+        Course
+    </h2>
+    <input type="text" name="course-text" id="course-text"/>
+</div>
+<div class="location-container">
+    <h2 class="label-header">
+        Location
+    </h2>
+    <select id="label-list">
+        {% for building in buildingData %}
+        <option class="building-location" value="{{ building[1] }}">{{ building[1] }}
+
+        </option>
+        {% endfor %}
+    </select>
+    <div class="submit-class">
+        <button onclick="addClass()">Add Class</button>
+    </div>
+</div>
+<script>
+    function addClass() {
+        var course=document.getElementById("course-text").value;
+        var location=document.getElementById("label-list").value;
+        $.ajax({
+            type: "POST",
+            url: "/add-classes",
+            data: { "course": course, "location": location }, 
+            contentType: 'application/json;charset=UTF-8',
+            dataType: 'json',
+            success: function(data) {
+                console.log('successfully posted data! response body: ' + data);
+            }
+        });
+    }
+</script>
 
 {% include "footer.html" %}
 
