--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -155,6 +155,7 @@ body {
 
 .parking-decks-container {
     list-style-type: none;
+    padding: 0;
 }
 
 .parking-decks-container .parking-deck {
@@ -184,4 +185,41 @@ body {
 
 .parking-decks-container .parking-deck .percent.alert {
     color: #fe2626;
+}
+
+#google-map-container {
+    margin: 2rem auto 0;
+    position: relative;
+    overflow: hidden;
+    min-height: 400px;
+    height: 60%;
+    width: 90%;
+}
+.route-selection-container {
+    display: block;
+    position: relative;
+    padding: 1rem;
+    color: #C9E03C;
+    margin: auto;
+    width: 90%;
+}
+
+.class-container {
+    margin-right: 10%;
+}
+
+.class-container, .travel-mode-container {
+    width: 45%;
+    float: left;
+}
+.class-container label, .travel-mode-container label {
+    width: 100%;
+    display: block;
+    margin-bottom: .5rem;
+}
+.class-container select, .travel-mode-container select {
+    width: 100%;
+    display: block;
+    height: 2rem;
+    font-size: 20px;
 }
