--- a/templates/home.html
+++ b/templates/home.html
@@ -10,10 +10,10 @@
             <a href="/map">Interactive Map</a>
         </div>
         <div class="fav-btn">
-            <a href="/add-favorites">Favorites</a>
+            <a href="/favorites">Favorites</a>
         </div>
         <div class="class-btn">
-            <a href="/add-classes">Classes</a>
+            <a href="/classes">Classes</a>
         </div>
         <div class="alert-btn">
             <a href="/alerts">Alerts</a>
