started classes.html and css, made userId tuple for correct class

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -4,6 +4,12 @@
 
 {% include "header.html" %}
 
+<div class="classes-header">
+    <h1 class="header">
+        Classes
+    </h1>
+</div>
+
 {% include "footer.html" %}
 
 {% endblock %}
