--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
             <a href="/add-favorites">Favorites</a>
         </div>
         <div class="class-btn">
-            <a href="/add-classes">Classes</a>
+            <a href="/classes">Classes</a>
         </div>
         <div class="alert-btn">
             <a href="/alerts">Alerts</a>
