--- a/templates/classes.html
+++ b/templates/classes.html
@@ -9,6 +9,18 @@
         Classes
     </h1>
 </div>
+<div class="class-container">
+    <label for="class-display">Class Display</label>
+    <ul id="class-selector">
+        {% for course in classData %}
+            <li class="course-list" value="{{ course[1] }}">
+                {% for value in course %}
+                    <span>{{ value }}</span>
+                {% endfor %}
+            </li>
+        {% endfor %}
+    </ul>
+</div>
 
 {% include "footer.html" %}
 
