--- a/static/styles/favorite.css
+++ b/static/styles/favorite.css
@@ -7,6 +7,7 @@ body {
 
 
 .favorites-header {
+    display: inline-block;
     background-color: #4CAF50;
     color: white;
     padding: 10px 20px;
