--- a/static/styles/favorite.css
+++ b/static/styles/favorite.css
@@ -1,4 +1,5 @@
-.favorites-header {
+
+.classes-header {
     margin: 10px;
 }
 
@@ -8,55 +9,25 @@
     margin: 0;
 }
 
-.favorites-header button i {
-    font-size: 15px;
-    background: green;
+.label-header {
+    color: #C9E03C;
+    text-shadow: black;
 }
 
-.fa-plus {
-    color: black;
-    font-size: 15px;
+.course-container {
+    width: 75%;
+    margin: 0 auto;
 }
 
-.favorites-list {
-    list-style: none;
-    padding-left: 0;
+.location-container {
+    width: 75%;
+    margin: 0 auto;
 }
 
-.favorite-item {
-    background: white;
-    margin: 0.5em;
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
+#label-list {
+    width: 100%;
 }
 
-.favorite-item .percentage {
-    background: #ddd;
-    border-radius: 5px;
-    padding: 3px 10px;
-    margin-left: 10px;
-}
-
-.delete-favorite-btn {
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 5px;
-}
-
-.fa-trash {
-    color: red;
-}
-
-@media (max-width: 768px) {
-    .favorites-header h1 {
-        font-size: 1.2em;
-    }
-
-    .favorite-item .percentage {
-        padding: 2px 7px;
-    }
+.submit-class button {
+    margin-top: 2rem;
 }
