--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -5,11 +5,8 @@
 {% include "header.html" %}
 
 <div class="favorites-header">
-    <h1 class="header">
-        Favorites
-    </h1>
-    
-    <button style="font-size:24px">Button <i class="fa fa-plus"></i></button>
+   <p>Favorite:</p>
+<button style="font-size:24px">Button <i class="fa fa-plus-circle"></i></button>
 </div>
 
 <ul class="favorites-list">
