--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -8,9 +8,7 @@
     <h1 class="header">
         Favorites
     </h1>
-    <button onclick="location.href='/add-favorites'" class="add-favorite-btn">
-        <i class="fa-sharp fa-solid fa-plus"></i>
-    </button>
+    <button style="font-size:24px">Button <i class="fa fa-plus"></i></button>
 </div>
 
 <ul class="favorites-list">
