--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -5,12 +5,12 @@
 {% include "header.html" %}
 
 <div class="favorites-header">
-<<<<<<< HEAD
-    <p>Favorite:</p>
-=======
-   <p>Favorite:</p>
->>>>>>> d92748a5cdb2ebb22ff74d35b2b12b6d68365dbc
-<button style="font-size:24px">Button <i class="fa fa-plus-circle"></i></button>
+    <h1 class="header">
+        Favorites
+    </h1>
+    <button onclick="location.href='/add-favorites'" class="add-favorite-btn">
+        <i class="fa-sharp fa-solid fa-plus"></i>
+    </button>
 </div>
 
 <ul class="favorites-list">
