--- a/static/styles/classes.css
+++ b/static/styles/classes.css
@@ -2,3 +2,41 @@
 .classes-header {
     margin: 10px;
 }
+
+.class-container {
+    width: 75%;
+    margin: 0 auto;
+    background-color: #1C732F;
+    border-radius: 20px;
+}
+
+#class-list {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#class-list li {
+    list-style-type: none;
+}
+
+.course-list {
+    color: white;
+    padding: 15px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.delete-btn {
+    margin-left: auto;
+}
+
+.add-class-button-container {
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.add-class-button {
+    justify-content: center;
+}
