--- a/static/styles/favorite.css
+++ b/static/styles/favorite.css
@@ -1,20 +1,42 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
+
+.favorite-header {
+    margin: 10px;
 }
 
-.favorites-header {
-    background-color: #4CAF50;
+.favorite-container {
+    width: 75%;
+    margin: 0 auto;
+    background-color: #1C732F;
+    border-radius: 20px;
+}
+
+#favorite-list {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#favorite-list li {
+    list-style-type: none;
+}
+
+.favorite-list {
     color: white;
-    padding: 10px 20px;
+    padding: 15px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.favorites-header h1 {
-    margin: 0;
-    font-size: 1.5em;
+.favorite-btn {
+    margin-left: auto;
+}
+
+.add-favorite-button-container {
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.add-favorite-button {
+    justify-content: center;
 }
