--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -9,8 +9,8 @@
         Favorite
     </h1>
 </div>
-<div class="favorite">
-    <ul id="favorite">
+<div class="favorite-container">
+    <ul id="favorite-list">
         {% for fav in favData %}
             <li class="favorite">
                 Course Name: {{ fav[4] }}, Building: {{ fav[1] }} <button class="delete-btn" onclick='var fav = "{{ fav[4] }}";removeFavorite(fav);'>Remove</button><script></script>
