--- a/templates/add_favorites.html
+++ b/templates/add_favorites.html
@@ -30,7 +30,7 @@
 <script>
     function addFavorite(favoriteName) {
     
-    console.log("Add favorite with Name:", favoriteName);
+    console.log("Add favorites with Name:", favoriteName);
     $.ajax({
             type: "POST",
             url: "/favorites",
