--- a/static/styles/favorite.css
+++ b/static/styles/favorite.css
@@ -6,7 +6,7 @@
 .favorites-container {
     width: 75%;
     margin: 0 auto;
-    background-color: #1C732F;
+    background-color: greenyellow;
     border-radius: 20px;
 }
 
